name:                aeson-example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/steshaw/aeson-example#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Shaw
maintainer:          steven@steshaw.org
copyright:           (c) 2016, Steven Shaw
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
  default-language:    Haskell2010

executable aeson-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson-example
                     , aeson
                     , bytestring
                     , template-haskell
                     , text
  default-language:    Haskell2010

test-suite aeson-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson-example
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/steshaw/aeson-example
